feat: Add survey form functionality with local storage and location services
- Updated pubspec.yaml to include dependencies for Hive, Hive Flutter, Connectivity Plus, and Geolocator.
- Implemented models for GeneralInfo, InstitutionalInfo, and InfrastructureInfo to structure survey data.
- Created services for location retrieval and local storage using Hive.
- Developed multiple form pages (SurveyFormPage, InstitutionalFormPage, InfrastructureFormPage) to collect user input.
- Added custom form fields for text input, dropdowns, numbers, and date selection.
- Integrated location services to fetch and display user's current coordinates.
- Implemented connectivity checks to manage survey data synchronization.
- Added a rounded container widget for better UI layout.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,8 +42,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Necesitamos acceso a tu ubicación para registrar la posición geográfica de la institución educativa</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Necesitamos acceso a tu ubicación para registrar la posición geográfica de la institución educativa</string>
 </dict>
 </plist>
